<resources>
    <string name="app_name">Gelir Gider Yapılacaklar Listesi</string>
    <string name="income">Gelir</string>
    <string name="expense">Gider</string>
    <string name="home">Ev</string>

    <string name="income_name">Gelir İsmi</string>
    <string name="income_add">Gelir Ekle</string>
    <string name="income_day">Gelir Günü</string>
    <string name="income_amount">Gelir Tutarı</string>


    <string name="expense_add">Gider Ekle</string>
    <string name="remaining_day">Kalan Gün</string>
    <string name="date">Tarih</string>
    <string name="expense_name">Gider İsmi</string>
    <string name="expense_amount">Gider Tutarı</string>
    <string name="expense_date">Gider Tarihi</string>
    <string name="debt">Borç</string>
    <string name="lender">Borç Veren</string>
    <string name="expense_day">Gider Günü Seç</string>

    <string name="expense_monthly">Aylık</string>
    <string name="expense_forOnce">Tek seferlik</string>
    <string name="expense_repetition">Tekrar Sayısı(Ay)</string>
    <string name="every_month">Her Ay</string>
    <string name="expense_thisMonth">Gider Bu Ay</string>

    <string name="delete">Sil</string>
    <string name="edit">Düzenle</string>
    <string name="add">Ekle</string>
    <string name="cancel">İptal</string>
    <string name="ok">Tamam</string>

    <string name="total_income">Toplam Gelir</string>
    <string name="potential_expense">Potansiyel Gider</string>
    <string name="paid_expense">Ödenen Gider</string>
    <string name="total_expense">Toplam Gider</string>
    <string name="avarage_income">Ortalama Gelir</string>
    <string name="avarage_expense">Ortalama Gider</string>
    <string name="remaining_money">Kalan Para</string>
    <string name="undo_complete">Geri al Tamamla</string>
    <string name="income_forOnce">Tel Seferlik</string>
    <string name="income_monthly">Aylık</string>
    <string name="investment">Yatırım</string>
    <string name="income_date">Gelir Günü Seç</string>

    <string name="income_this_month">Gelir Bu Ay</string>
    <string name="percentage_of_increase">Artış Yüzdesi</string>

    <string name="payment_time">Ödeme Zamanı</string>
    <string name="paid">Yattı</string>
    <string name="expense_paid">Ödendi</string>


    <string name="day_remained">Gün Kaldı</string>
    <string name="day_passed">Gün Geçti</string>


    <string name="money_in_cache">Zuladaki Para</string>
    <string name="need">İhtiyaç</string>
    <string name="want">İstek</string>

    <string name="save">Kaydet</string>

    <!--remote-->
    <!--<string route="locked">Locked !!</string>-->
    <string name="locked">Kilitlendi !!</string>
    <!--<string route="locked_content">App has locked by Admin, Please try again later</string>-->
    <string name="locked_content">Uygulama yönetici tarafından kilitlendi, lütfen daha sonra tekrar deneyin</string>
    <!--<string route="update">Update</string>-->
    <string name="update">Güncelleme</string>
    <!--<string route="update_content">We have update for you, you can update from Google Play</string>-->
    <string name="update_content">Sizin için bir güncellememiz var, Play store üzeinden uygulamayı güncelleyebilirsiniz</string>
    <!--<string route="update_force_content">We have update for you, please update from Google Play Store to continue</string>-->
    <string name="update_force_content">Sizin için bir güncellememiz var, uygulamayı kullanmaya devam etmek için lütfen uygulamayı güncelleyin</string>

    <!--warnings-->
    <string name="warning_empty">Lütfen Boş Bırakmayın</string>
    <string name="warning_character_much"> Karakterden Fazla Girmeyin</string>
    <string name="warning_character_less"> Karakterden Az Girmeyin</string>
    <string name="warning_after_dat">Noktadan Sonra</string>
    <string name="warning_invalid_date">Lütfen gelecekten bir tarih seçiniz</string>

    <!--info-->
    <string name="info_deleted_after_now"> sonrası silindi</string>
    <string name="info_deleted_card">Geçerli kart silindi</string>
    <string name="back">Geri</string>
    <string name="forward">İleri</string>
    <string name="name">isim</string>
    <string name="amount">Tutar</string>
    <string name="limited">Limitli</string>
    <string name="Repetition">Tekrar</string>
    <string name="income_update">Gelir Güncelle</string>
    <string name="info_delete_card">Bu gelir geçmişteki bir zamana ait, sadece bu zamandaki kartı mı silmek istiyorsunuz</string>
    <string name="delete_this_card">Kartı sil</string>
    <string name="delete_income">Geliri sil</string>
    <string name="main_page">Ana Sayfa</string>
    <string name="update_expense">Gider Güncelle</string>


    <string-array name="days">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>

    </string-array>
</resources>