<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="10dp">

                <FrameLayout
                    android:id="@+id/layout_expense_add_close"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginStart="16dp"
                    android:background="@drawable/ripple_button"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:background="#00000000"
                            android:backgroundTint="#00000000"
                            android:src="@drawable/vector_close" />

                    </LinearLayout>

                </FrameLayout>

                <TextView
                    android:id="@+id/layout_expense_add_expenseAdd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/expense_add"
                    android:textSize="25dp"
                    app:layout_constraintBottom_toBottomOf="@+id/layout_expense_add_close"
                    app:layout_constraintStart_toEndOf="@+id/layout_expense_add_close"
                    app:layout_constraintTop_toTopOf="@+id/layout_expense_add_close" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/layout_expense_add_save"
                    style="@style/Widget.Material3.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:text="@string/save"
                    android:textColor="@color/Primary10"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/layout_expense_add_expenseAdd"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/layout_expense_add_expenseAdd">

                </com.google.android.material.button.MaterialButton>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/darker_gray" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="10dp"
                app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/layout_expense_add_expenseName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:hint="@string/expense_name" />
                </com.google.android.material.textfield.TextInputLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/layout_expense_add_amount"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/expense_amount"
                        android:inputType="numberDecimal" />

                </com.google.android.material.textfield.TextInputLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>


            <RadioGroup
                android:id="@+id/layout_expense_add_repetationType"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="12dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/layout_expense_add_repetationType2"
                    style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/expense_forOnce"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/layout_expense_add_repetationType1"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/layout_expense_add_repetationType1"
                    style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="12dp"
                    android:hint="@string/expense_monthly"
                    android:scrollbarStyle="outsideInset"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/layout_expense_add_repetationType2"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </RadioGroup>


            <LinearLayout
                android:id="@+id/layout_expense_add_monthlyView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layout_expense_add_repetitionView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/layout_expense_add_repetation"
                            style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="24dp"
                            android:layout_marginEnd="24dp"
                            android:hint="@string/expense_repetition"
                            android:inputType="number"
                            android:maxLength="2"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.0" />

                    </com.google.android.material.textfield.TextInputLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/layout_expense_add_date"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:background="@drawable/rectengle_outline"
                    android:paddingLeft="15dp"
                    android:text="@string/expense_date"
                    android:textColor="@color/black"
                    app:backgroundTint="@null"
                    tools:layout_editor_absoluteX="276dp"
                    tools:layout_editor_absoluteY="4dp" />

            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="12dp">

                <RadioGroup
                    android:id="@+id/layout_expense_add_expenseType"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical|center_horizontal"
                    android:orientation="horizontal">

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/layout_expense_add_typeNeed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="12dp"
                        android:text="@string/need" />

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/layout_expense_add_typeWant"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="12dp"
                        android:layout_marginRight="12dp"
                        android:text="@string/want" />

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/layout_expense_add_typeDebt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="12dp"
                        android:text="@string/debt" />

                </RadioGroup>


            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_expense_add_lenderView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/layout_expense_add_lender"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="24dp"
                        android:layout_marginRight="24dp"
                        android:hint="@string/lender" />
                </com.google.android.material.textfield.TextInputLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/layout_expense_add_done"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="24dp"
                android:text="@string/undo_complete" />

            <Button
                android:id="@+id/layout_expense_add_delete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="24dp"
                android:backgroundTint="@color/red_delete"
                android:text="@string/delete" />
        </LinearLayout>

    </ScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>