<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp">



    <com.google.android.material.card.MaterialCardView
        android:id="@+id/IncomeCardView"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        style="@style/Widget.App.CardViewMyFilled"
        android:clickable="true"
        android:focusable="true"
        android:checkable="true"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">
            <TextView
                android:id="@+id/incomeID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="ID"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/incomeName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/income"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/incomeRemainingDay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remaining_day"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/incomeAmount"
                app:layout_constraintEnd_toStartOf="@+id/incomeAmount"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/incomeAmount" />

            <TextView
                android:id="@+id/incomeAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/income_amount"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/incomeName" />

            <TextView
                android:id="@+id/incomeDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/incomeAmount"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/incomeAmount"
                app:layout_constraintTop_toTopOf="@+id/incomeAmount" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>

</LinearLayout>