<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    >

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/expenseCardViewDone"
        android:layout_width="match_parent"
        android:clickable="true"
        android:layout_height="wrap_content"
        style="@style/Widget.App.CardViewMyFilled"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="30dp"
            >


            <TextView
                android:id="@+id/expenseDone_ID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="ID"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/expenseDone_debt"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="Borç veren"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/expenseDoneExpenseName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/expense_name"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/expenseDone_RemainingDay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remaining_day"
                app:layout_constraintBottom_toBottomOf="@+id/expenseDone_ExpenseAmount"
                app:layout_constraintEnd_toStartOf="@+id/expenseDone_ExpenseAmount"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/expenseDone_ExpenseAmount" />

            <TextView
                android:id="@+id/expenseDone_ExpenseAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/expense_amount"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.501"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/expenseDoneExpenseName" />

            <TextView
                android:id="@+id/expenseDoneDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expense_date"
                app:layout_constraintBottom_toBottomOf="@+id/expenseDone_ExpenseAmount"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/expenseDone_ExpenseAmount"
                app:layout_constraintTop_toTopOf="@+id/expenseDone_ExpenseAmount" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>
</LinearLayout>
