<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginTop="5dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/expenseCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        style="@style/Widget.App.CardViewMyFilled">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="80dp">

            <TextView
                android:id="@+id/expense_ID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="ID"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/expenseCard_ExpenseName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expense_name"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/expenseCard_ExpenseDate"
                app:layout_constraintEnd_toStartOf="@+id/expenseCard_ExpenseDate"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/expenseCard_ExpenseDate" />

            <TextView
                android:id="@+id/expenseCard_ExpenseDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expense_date"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/expenseCard_ExpenseAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expense_amount"
                android:textSize="25sp"
                app:layout_constraintBottom_toBottomOf="@+id/expenseCard_ExpenseDate"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/expenseCard_ExpenseDate"
                app:layout_constraintTop_toTopOf="@+id/expenseCard_ExpenseDate" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>